# keepeyesopen

./: .gitignore  README.md  dms_logic.py
DMS_project/: .env.example  .gitignore  README.md  protocol.json  requirements.txt
DMS_project/cloud_backend/: index.html  web_backend.py
DMS_project/docs/: cam_board_validation_protocol.md  cam_memory_root_cause.md  cam_partition_candidates.md  firmware_memory_experiment_matrix.md  g4_pc_vision_s3_contract.md  s3_iram_root_cause.md
DMS_project/esp32_firmware/: CMakeLists.txt
DMS_project/esp32_firmware/esp32_cam_fw/: CMakeLists.txt  sdkconfig.defaults
DMS_project/esp32_firmware/esp32_cam_fw/main/: CMakeLists.txt  config.h  dms_secrets.h.example  main.c  main.cpp
DMS_project/esp32_firmware/esp32_s3_fw/: CMakeLists.txt  build_log.txt  build_now.bat  build_output.txt  partitions.csv  sdkconfig.defaults
DMS_project/esp32_firmware/main/: CMakeLists.txt  audio_test.c  camera_test.c  config.h  dms_algorithm.c  ear_mar.c  ear_mar.h  ir_led_test.c  main.c  perclos.c  perclos.h  peripherals_all.c  wifi_mqtt_test.c
DMS_project/pc_prototype/: bridge.py  cam_bridge.py  face_capture.py
DMS_project/shared/: __init__.py  dms_contract.py
DMS_project/tests/: static_safety_gate.py
DMS_project/tests/host_algorithm/: CMakeLists.txt  test_algorithm.c
DMS_project/tests/python/: test_contract_and_backend.py
DMS_project/tools/: alert_safe.h  alert_sleep.h  alert_sleep_play.h  alert_wake.h  alert_yawn_play.h  gen_audio.py  set_ip.py
PC_service_python/: face_capture.py  index.html  protocol.json  test_api.py  web_backend.py
(+26 files in other folders)
